2003-12-08  Alexander Malysh  <a.malysh@centrium.de>
    * configure.in, configure: changed 'head -1' call to propperly 'head -n 1'.
    * gwlib/gw_uuid.[ch], gwlib/gwlib.c: added uuid_init() and uuid_shutdown()
      functions. uuid_init() just open the random device (if any) because otherwise
      it's possible that we open device twice (race condition).

2003-12-08  Stipe Tolj  <tolj@wapme-systems.de>
    Universal Unique Identifier (UUID) Patch by Alexander.
    * configure[.in]: adding word size, srandom() and various header checks 
      needed for gwlib/gw_uuid.[ch].
    * gw-config.h.in: some additional #undef's
    * gw/bb_[alog|smscconn|store].c, gw/smsbox.c, gw/urltrans.c, 
      gw/smsc/smsc_[fake|http|soap].c: changing ID handling to UUID routines.
    * gw/msg-decl.h, gw/msg.[ch]: exchanged INTEGER(id) to UUID(id) and added
      adequate handling of UUID in msg_foobar() routines.
    * gw/smsc/smsc_fake.c: added 'dlr-mask' msg type handling. 
    * gwlib/gw_uuid.[ch]: UIID implementation (taken from libuuid), see 
      prefix comment block for author information and acknowledgement.
    * gwlib/gw_uuid_types.h.in: autoconf header file for handling UUID required
      types that have been detected while configure run.
    * gwlib/gwlib.h: added "gw_uuid.h" header inclusion.
    * test/test_dict.c: using UUID as unique key for the "huge" test.
    Thanks a lot to Alexander for working this out.
    [Msg-ID: <200311302210.18110.a.malysh@centrium.de>]

2003-12-08  Stipe Tolj  <tolj@wapme-systems.de>
    * gwlib/conn.c: fixed compiler warning, commenting out function 
      tmp_rsa_callback().

2003-12-05  Alexander Malysh  <a.malysh@centrium.de>
    * gw/dlr.c: fixed bug that dlr's were not routed correctly to smsbox within 
      bb_boxc, due to last changes in dlr.c (now we do not duplicate dlr_entry 
      values in order to avoid not needed memory allocations, but bb_boxc await 
      e.g. boxc_id as NULL and not as "").
