@@ -1,3 +1,7 @@
+2003-12-09  Alexander Malysh  <a.malysh@centrium.de>
+    * gw/dlr.[ch], gw/dlr_p.h, gwlib/cfg.[ch], gwlib/log.[ch], gwlib/mime.h,
+      radius/radius_acct.c, wap/wsp_headers.c: fixed compiler warnings.
+
 2003-12-08  Alexander Malysh  <a.malysh@centrium.de>
     * configure.in, configure: changed 'head -1' call to propperly 'head -n 1'.
     * gwlib/gw_uuid.[ch], gwlib/gwlib.c: added uuid_init() and uuid_shutdown()
